added navigation block
added style for navigation block

--- a/index.html
+++ b/index.html
@@ -43,38 +43,24 @@
                     </div>
                 </div>
             </div>
-
-            <!-- <div>
-                <p>КАТАЛОГ</p>
-
-                <form action="">
-                    <input type="search" required placeholder="Что вы ищете?">
-                </form>
-
-                <ul>
-                    <li><a href="#">АКЦИИ и НОВОСТИ</a></li>
-                    <li><a href="#">МАГАЗИНЫ</a></li>
-                    <li><a href="#">УСЛУГИ</a></li>
-                    <li><a href="#">ПОКУПАТЕЛЯМ</a></li>
-                </ul>
-            </div> -->
         </div>
     </header>
 
-    <main>
-        <div class="container">
-            <section>
-                <p>КАТАЛОГ</p>
+    <main class="main">
+        <div class="container container-bg">
+            <section class="navigation">
+                <p class="navigation__catalog">КАТАЛОГ</p>
 
-                <form action="">
-                    <input type="search" required placeholder="Что вы ищете?">
+                <form action="" class="navigation__search">
+                    <input class="navigation__search-input" type="search" required placeholder="Что вы ищете?">
+                    <input class="navigation__search-input-btn" type="submit" value="">
                 </form>
 
-                <ul>
-                    <li><a href="#">АКЦИИ и НОВОСТИ</a></li>
-                    <li><a href="#">МАГАЗИНЫ</a></li>
-                    <li><a href="#">УСЛУГИ</a></li>
-                    <li><a href="#">ПОКУПАТЕЛЯМ</a></li>
+                <ul class="navigation__menu">
+                    <li class="navigation__menu-item"><a href="#" class="navigation__menu-item-link">АКЦИИ и НОВОСТИ</a></li>
+                    <li class="navigation__menu-item"><a href="#" class="navigation__menu-item-link">МАГАЗИНЫ</a></li>
+                    <li class="navigation__menu-item"><a href="#" class="navigation__menu-item-link">УСЛУГИ</a></li>
+                    <li class="navigation__menu-item"><a href="#" class="navigation__menu-item-link">ПОКУПАТЕЛЯМ</a></li>
                 </ul>
             </section>
 
