--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </div>
 
                 <div class="header__main-info">
-                    <div class="header__main-info-item">
+                    <div class="header__main-info-item header__main-info-item-geo">
                         <p>Ваш город:</p>
-                        <p>Санкт-Петербург</p>
+                        <p><a href="#" class="header__main-info-item-geo-link">Санкт-Петербург</a></p>
                     </div>
 
                     <div class="header__main-info-item header__main-info-item-tel">
@@ -64,13 +64,13 @@
                 </ul>
             </section>
 
-            <section>
-                <ul>
-                    <li><a href="#">Главная</a></li>
-                    <li>&gt;</li>
-                    <li><a href="#">Покупателям</a></li>
-                    <li>&gt;</li>
-                    <li><a href="#">Резка и распил</a></li>
+            <section class="crumbs">
+                <ul class="crumbs__items">
+                    <li class="crumbs__items-item"><a href="#" class="crumbs__items-item-link">Главная</a></li>
+                    <li class="crumbs__items-item">&gt;</li>
+                    <li class="crumbs__items-item"><a href="#" class="crumbs__items-item-link">Покупателям</a></li>
+                    <li class="crumbs__items-item">&gt;</li>
+                    <li class="crumbs__items-item"><a href="#" class="crumbs__items-item-link crumbs__items-item-link-nounderline">Резка и распил</a></li>
                 </ul>
             </section>
 
