--- a/index.html
+++ b/index.html
@@ -74,91 +74,94 @@
                 </ul>
             </section>
 
-            <section>
-                <ul>
-                    <li><a href="#">Доставка</a></li>
-                    <li><a href="#">Разгрузка и подъем</a></li>
-                    <li><a href="#">Колеровка красок</a></li>
-                    <li><a href="#">Резка и распил</a></li>
-                    <li><a href="#">Оплата товара</a></li>
-                    <li><a href="#">Программа лояльности</a></li>
-                    <li><a href="#">Как заказать</a></li>
-                    <li><a href="#">Возврат</a></li>
-                </ul>
+            <div class="container container-shadow">
+                <section class="about">
+                    <div class="about__menu">
+                        <ul class="about__menu-items">
+                            <li class="about__menu-item about__menu-item-active"><a href="#" class="about__menu-item-link about__menu-item-link-active">Доставка</a></li>
+                            <li class="about__menu-item"><a href="#" class="about__menu-item-link">Колеровка красок</a></li>
+                            <li class="about__menu-item"><a href="#" class="about__menu-item-link">Резка и распил</a></li>
+                            <li class="about__menu-item"><a href="#" class="about__menu-item-link">Разгрузка и подъем</a></li>
+                            <li class="about__menu-item"><a href="#" class="about__menu-item-link">Оплата товара</a></li>
+                            <li class="about__menu-item"><a href="#" class="about__menu-item-link">Программа лояльности</a></li>
+                            <li class="about__menu-item"><a href="#" class="about__menu-item-link">Как заказать</a></li>
+                            <li class="about__menu-item"><a href="#" class="about__menu-item-link">Возврат</a></li>
+                        </ul>
+                    </div>
 
-                <img src="img/car.png" alt="Грузовик">
+                    <img class="about__image" src="img/car.png" alt="Грузовик">
 
-                <div>
-                    <h1>ДОСТАВКА ТОВАРА</h1>
-                    <p>Избавьтесь от забот по погрузке, доставке и разгрузке купленноого товара! Теперь все это мы сделаем за Вас! Быстро и бережно доставим Вашу покупку на дачу, в квартиру или на объект.</p>
-                </div>
-            </section>
+                    <div class="about__text">
+                        <h1 class="about__text-title">ДОСТАВКА ТОВАРА</h1>
+                        <p class="about__text-description">Избавьтесь от забот по погрузке, доставке и разгрузке купленноого товара! Теперь все это мы сделаем за Вас! Быстро и бережно доставим Вашу покупку на дачу, в квартиру или на объект.</p>
+                    </div>
+                </section>
 
-            <section>
-                <h3>ПРЕИМУЩЕСТВА ДОСТАВКИ ОТ САТУРНА</h3>
+                <section>
+                    <h3>ПРЕИМУЩЕСТВА ДОСТАВКИ ОТ САТУРНА</h3>
 
-                <p>Бесплатно или по минимальному тарифу (в «зоне действия единой стоимости доставки»)</p>
-                <p>В удобное для вас время</p>
-                <p>Бережная транспортировка на оборудованных автомобилях</p>
-                <p>Доставка по Петербургу, области и пригородам</p>
-            </section>
+                    <p>Бесплатно или по минимальному тарифу (в «зоне действия единой стоимости доставки»)</p>
+                    <p>В удобное для вас время</p>
+                    <p>Бережная транспортировка на оборудованных автомобилях</p>
+                    <p>Доставка по Петербургу, области и пригородам</p>
+                </section>
 
-            <section>
-                <h2>УЗНАЙТЕ СТОИМОСТЬ СВОЕЙ ДОСТАВКИ СЕЙЧАС!</h2>
+                <section>
+                    <h2>УЗНАЙТЕ СТОИМОСТЬ СВОЕЙ ДОСТАВКИ СЕЙЧАС!</h2>
 
-                <button>РАССЧИТАТЬ</button>
-            </section>
+                    <button>РАССЧИТАТЬ</button>
+                </section>
 
-            <section>
-                <h3>ТИПЫ ДОСТАВКИ</h3>
+                <section>
+                    <h3>ТИПЫ ДОСТАВКИ</h3>
 
-                <div>
-                    <p>В течение дня</p>
+                    <div>
+                        <p>В течение дня</p>
 
-                    <p>Осуществляется <b>с 9:00 до 22:00.</b> На <b>текущий день</b> доставка <b>оформляется до 10:30.</b></p>
-                </div>
+                        <p>Осуществляется <b>с 9:00 до 22:00.</b> На <b>текущий день</b> доставка <b>оформляется до 10:30.</b></p>
+                    </div>
 
-                <div>
-                    <p>Стандартная</p>
+                    <div>
+                        <p>Стандартная</p>
 
-                    <p>Осуществляется <b>с 9:00 до 22:00.</b> Заказ доставляется в течение выбранного 4-часового интервала. На <b>сегодня оформляется до 17:30</b>, на последующие дни в любое время.</p>
-                </div>
+                        <p>Осуществляется <b>с 9:00 до 22:00.</b> Заказ доставляется в течение выбранного 4-часового интервала. На <b>сегодня оформляется до 17:30</b>, на последующие дни в любое время.</p>
+                    </div>
 
-                <div>
-                    <p>Горячая доставка</p>
+                    <div>
+                        <p>Горячая доставка</p>
 
-                    <p>Оформляется <b>только на сегодня</b>, начиная <b>с 9:00 до 17:00.</b> Заказ доставляется в течении выбранного 2-часового интервала.</p>
-                </div>
+                        <p>Оформляется <b>только на сегодня</b>, начиная <b>с 9:00 до 17:00.</b> Заказ доставляется в течении выбранного 2-часового интервала.</p>
+                    </div>
 
-                <div>
-                    <p>Точно ко времени</p>
+                    <div>
+                        <p>Точно ко времени</p>
 
-                    <p>Заказ доставляется точно ко времени <b>в рамках интервала с 9:00 до 22:00.</b> <b>Оформляется</b> не позднее чем <b>за 5 часов</b> до желаемого времени доставки.</p>
-                    <p>
-                        (Чтобы мы привезли заказ сегодня, он должен быть оформлен и подтвержден оператором с 8:00 до 17:00. Если заказ будет оформлен и подтвержден сегодня после 17:00, он будет доставлен не ранее 13:00 завтрашнего дня).
-                    </p>
-                </div>
+                        <p>Заказ доставляется точно ко времени <b>в рамках интервала с 9:00 до 22:00.</b> <b>Оформляется</b> не позднее чем <b>за 5 часов</b> до желаемого времени доставки.</p>
+                        <p>
+                            (Чтобы мы привезли заказ сегодня, он должен быть оформлен и подтвержден оператором с 8:00 до 17:00. Если заказ будет оформлен и подтвержден сегодня после 17:00, он будет доставлен не ранее 13:00 завтрашнего дня).
+                        </p>
+                    </div>
 
-                <div>
-                    <p><b>Итоговое подтверждение</b> возможности доставки осуществляется оператором <b>по телефону.</b></p>
+                    <div>
+                        <p><b>Итоговое подтверждение</b> возможности доставки осуществляется оператором <b>по телефону.</b></p>
 
-                    <a href="#">Подробная информация об условиях доставки.</a>
-                </div>
-            </section>
+                        <a href="#">Подробная информация об условиях доставки.</a>
+                    </div>
+                </section>
 
-            <section>
-                <h3>РАЗГРУЗКА И ПОДЪЕМ</h3>
+                <section>
+                    <h3>РАЗГРУЗКА И ПОДЪЕМ</h3>
 
-                <p>Мы заботимся о наших клиентах и всегда готовы предоставить полный комплекс услуг. Помимо доставки мы можем осуществить <b>разгрузку, пронос и подъем</b> ваших товаров.</p>
+                    <p>Мы заботимся о наших клиентах и всегда готовы предоставить полный комплекс услуг. Помимо доставки мы можем осуществить <b>разгрузку, пронос и подъем</b> ваших товаров.</p>
 
-                <div>
-                    <img src="img/loader.png" alt="Грузчик">
-                    <h2>НУЖНО РАЗГРУЗИТЬ И ПОДНЯТЬ ТОВАРЫ?</h2>
+                    <div>
+                        <img src="img/loader.png" alt="Грузчик">
+                        <h2>НУЖНО РАЗГРУЗИТЬ И ПОДНЯТЬ ТОВАРЫ?</h2>
 
-                    <button>ПОДРОБНОСТИ</button>
-                </div>
-            </section>
-        </div>
+                        <button>ПОДРОБНОСТИ</button>
+                    </div>
+                </section>
+            </div>
     </main>
 
     <footer>
