--- a/index.html
+++ b/index.html
@@ -97,13 +97,20 @@
                     </div>
                 </section>
 
-                <section>
-                    <h3>ПРЕИМУЩЕСТВА ДОСТАВКИ ОТ САТУРНА</h3>
+                <section class="advantages">
+                    <h3 class="advantages__title">ПРЕИМУЩЕСТВА ДОСТАВКИ ОТ САТУРНА</h3>
 
-                    <p>Бесплатно или по минимальному тарифу (в «зоне действия единой стоимости доставки»)</p>
-                    <p>В удобное для вас время</p>
-                    <p>Бережная транспортировка на оборудованных автомобилях</p>
-                    <p>Доставка по Петербургу, области и пригородам</p>
+                    <div class="advantages__items">
+                        <div class="advantages__items-column">
+                            <p class="advantages__items-column-item advantages__items-column-item-delivery">Бесплатно или по минимальному тарифу <br> (в «зоне действия единой стоимости доставки»)</p>
+                            <p class="advantages__items-column-item advantages__items-column-item-time">В удобное для вас время</p>
+                        </div>
+
+                        <div class="advantages__items-column">
+                            <p class="advantages__items-column-item advantages__items-column-item-okey">Бережная транспортировка на <br> оборудованных автомобилях</p>
+                            <p class="advantages__items-column-item advantages__items-column-item-jps">Доставка по Петербургу, <br> области и пригородам</p>
+                        </div>
+                    </div>
                 </section>
 
                 <section>
