--- a/index.html
+++ b/index.html
@@ -113,10 +113,15 @@
                     </div>
                 </section>
 
-                <section>
-                    <h2>УЗНАЙТЕ СТОИМОСТЬ СВОЕЙ ДОСТАВКИ СЕЙЧАС!</h2>
+                <section class="price">
+                    <div class="price__content">
 
-                    <button>РАССЧИТАТЬ</button>
+                        <p class="price__content-text">УЗНАЙТЕ СТОИМОСТЬ</p>
+                        <p class="price__content-text">СВОЕЙ ДОСТАВКИ СЕЙЧАС!</p>
+
+
+                        <button class="price__content-btn">РАССЧИТАТЬ</button>
+                    </div>
                 </section>
 
                 <section>
