--- a/index.html
+++ b/index.html
@@ -124,40 +124,42 @@
                     </div>
                 </section>
 
-                <section>
-                    <h3>ТИПЫ ДОСТАВКИ</h3>
+                <section class="types">
+                    <h3 class="types__title">ТИПЫ ДОСТАВКИ</h3>
 
-                    <div>
-                        <p>В течение дня</p>
+                    <div class="types__item">
+                        <p class="types__item-caption">В течение дня</p>
 
-                        <p>Осуществляется <b>с 9:00 до 22:00.</b> На <b>текущий день</b> доставка <b>оформляется до 10:30.</b></p>
+                        <p class="types__item-description types__item-description-today">Осуществляется <b>с 9:00 до 22:00.</b> <br> На <b>текущий день</b> доставка <b>оформляется до 10:30.</b></p>
                     </div>
 
-                    <div>
-                        <p>Стандартная</p>
+                    <div class="types__item">
+                        <p class="types__item-caption">Стандартная</p>
 
-                        <p>Осуществляется <b>с 9:00 до 22:00.</b> Заказ доставляется в течение выбранного 4-часового интервала. На <b>сегодня оформляется до 17:30</b>, на последующие дни в любое время.</p>
+                        <p class="types__item-description types__item-description-standart">Осуществляется <b>с 9:00 до 22:00.</b> <br> Заказ доставляется в течение выбранного 4-часового интервала. <br> На <b>сегодня оформляется до 17:30</b>, на последующие дни в любое время.</p>
                     </div>
 
-                    <div>
-                        <p>Горячая доставка</p>
+                    <div class="types__item">
+                        <p class="types__item-caption">Горячая доставка</p>
 
-                        <p>Оформляется <b>только на сегодня</b>, начиная <b>с 9:00 до 17:00.</b> Заказ доставляется в течении выбранного 2-часового интервала.</p>
+                        <p class="types__item-description types__item-description-fast">Оформляется <b>только на сегодня</b>, начиная <b>с 9:00 до 17:00.</b> <br> Заказ доставляется в течении выбранного 2-часового интервала.</p>
                     </div>
 
-                    <div>
-                        <p>Точно ко времени</p>
+                    <div class="types__item">
+                        <p class="types__item-caption">Точно ко времени</p>
 
-                        <p>Заказ доставляется точно ко времени <b>в рамках интервала с 9:00 до 22:00.</b> <b>Оформляется</b> не позднее чем <b>за 5 часов</b> до желаемого времени доставки.</p>
-                        <p>
-                            (Чтобы мы привезли заказ сегодня, он должен быть оформлен и подтвержден оператором с 8:00 до 17:00. Если заказ будет оформлен и подтвержден сегодня после 17:00, он будет доставлен не ранее 13:00 завтрашнего дня).
-                        </p>
+                        <div class="types__item-description">
+                            <p>Заказ доставляется точно ко времени <b>в рамках интервала с 9:00 до 22:00.</b> <br> <b>Оформляется</b> не позднее чем <b>за 5 часов</b> до желаемого времени доставки.</p>
+                            <p class="types__item-description-footnote">
+                                (Чтобы мы привезли заказ сегодня, он должен быть оформлен и подтвержден оператором с 8:00 до 17:00. Если заказ будет оформлен и подтвержден сегодня после 17:00, он будет доставлен не ранее 13:00 завтрашнего дня).
+                            </p>
+                        </div>
                     </div>
 
-                    <div>
-                        <p><b>Итоговое подтверждение</b> возможности доставки осуществляется оператором <b>по телефону.</b></p>
+                    <div class="types__confirmation">
+                        <p class="types__confirmation-text"><b>Итоговое подтверждение</b> возможности доставки осуществляется оператором <b>по телефону.</b></p>
 
-                        <a href="#">Подробная информация об условиях доставки.</a>
+                        <a class="types__confirmation-link" href="#">Подробная информация об условиях доставки.</a>
                     </div>
                 </section>
 
