--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <p class="price__content-text">СВОЕЙ ДОСТАВКИ СЕЙЧАС!</p>
 
 
-                        <button class="price__content-btn">РАССЧИТАТЬ</button>
+                        <button class="price__content-btn btn">РАССЧИТАТЬ</button>
                     </div>
                 </section>
 
@@ -163,16 +163,19 @@
                     </div>
                 </section>
 
-                <section>
-                    <h3>РАЗГРУЗКА И ПОДЪЕМ</h3>
+                <section class="unloading">
+                    <h3 class="unloading__title">РАЗГРУЗКА И ПОДЪЕМ</h3>
 
-                    <p>Мы заботимся о наших клиентах и всегда готовы предоставить полный комплекс услуг. Помимо доставки мы можем осуществить <b>разгрузку, пронос и подъем</b> ваших товаров.</p>
+                    <p class="unloading___text">Мы заботимся о наших клиентах и всегда готовы предоставить полный комплекс услуг. <br> Помимо доставки мы можем осуществить <b>разгрузку, пронос и подъем</b> ваших товаров.</p>
 
-                    <div>
+                    <div class="unloading__application">
                         <img src="img/loader.png" alt="Грузчик">
-                        <h2>НУЖНО РАЗГРУЗИТЬ И ПОДНЯТЬ ТОВАРЫ?</h2>
 
-                        <button>ПОДРОБНОСТИ</button>
+                        <div class="unloading__application-content">
+                            <h2 class="unloading__application-text">НУЖНО РАЗГРУЗИТЬ И ПОДНЯТЬ ТОВАРЫ?</h2>
+
+                            <button class="btn">ПОДРОБНОСТИ</button>
+                        </div>
                     </div>
                 </section>
             </div>
